# nova-time-decoder

./: .gitignore  README.md  bootstrap.sh  pyproject.toml
docs/: GETTING_STARTED.md
man/: nova-time-convert.1  nova_time_decoder.3
src/nova_time_decoder/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
